feat: Configureer auth Swagger
