# backend/src/routes/auth.ts
@@ -9,14 +9,17 @@ router.get('/config', (req, res) => {
 });
 
 router.get('/testAuthenticatedOnly', authenticatedOnly, (req, res) => {
+    /* #swagger.security = [{ "student": [ ] }, { "teacher": [ ] }] */
     res.json({message: "If you see this, you should be authenticated!"});
 });
 
 router.get('/testStudentsOnly', studentsOnly, (req, res) => {
+    /* #swagger.security = [{ "student": [ ] }] */
     res.json({message: "If you see this, you should be a student!"});
 });
 
 router.get('/testTeachersOnly', teachersOnly, (req, res) => {
+    /* #swagger.security = [{ "teacher": [ ] }] */
     res.json({message: "If you see this, you should be a teacher!"});
 });
 
